# Simulador-de-Arquiteturas-de-Monitoramento-Remoto--DiogoOg

./: CMakeLists.txt  JovenPAn  Lifes_Protocol.cpp  Lifes_Protocol.h  Logger.cpp  Logger.h  Socket_TCP.cpp  Socket_TCP.h  V1_QUD_A_12_20_07_2022_18_40.xlsx  dataset_parser.cpp  dataset_parser.h  example_lifesim_dataset_loader.csv  lifes_sim_tools.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.h
